Don't use SA account, even on a junk database.
Also cleaned up a typo and cleaned up the layout page.

--- a/SimpleBlog/Web.config
+++ b/SimpleBlog/Web.config
@@ -17,7 +17,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=localhost\SQLEXPRESS;Database=SimpleBlog;User Id=sa; Password=!password0!;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=localhost\SQLEXPRESS;Database=SimpleBlog;User Id=BlogUser; Password=!password0!;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
